--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 			</td>
 		</tr>
 		<tr>
+			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
 			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 			</br> 
@@ -87,6 +88,8 @@
 				</td>
 			</tr>
 			<tr>
+			<td style="width:350px; text-align:center">
+				</p>
 				<h2>ABSTRACTS</h2> 
 				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
 				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
@@ -101,8 +104,8 @@
  <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-				<p>
 				<h2>ORGANISING COMMITTEE</h2> 
+				<p>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
 				Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
 				Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
