--- a/index.html
+++ b/index.html
@@ -50,8 +50,16 @@
 	</br>
 </p>
 
-<h1 id="program"> THE WORKSHOP </h1>
+<h1 id="workshop"> THE WORKSHOP </h1>
   <table style="width:100%">
+		<tr>
+			<td style="width:350px; text-align:center">
+			<h2>ONWARDS TO OHBM</h2> 
+			<p>
+			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 			</br> 
+			</p>
+			</td>
+		</tr>
 		<tr>
 			<td style="width:350px; text-align:center">
 			<h2>PROGRAM</h2> 
@@ -62,19 +70,21 @@
 	  		</p>
 			</td>
 		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>ONWARDS TO OHBM</h2> 
-			<p>
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 			</br> 
-			</p>
-			</td>
-		</tr>
+
  </table>
 			
  
  <h1 id="register"> REGISTER</h1>
   <table style="width:100%">
+		<tr>
+			<td style="width:350px; text-align:center">
+				</p>
+				<h2>ABSTRACTS</h2> 
+				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
+				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
+	  			</p>
+			</td>	
+		</tr>
 		<tr>
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION</h2> 
@@ -87,15 +97,6 @@
 	  			</p>
 				</td>
 			</tr>
-			<tr>
-			<td style="width:350px; text-align:center">
-				</p>
-				<h2>ABSTRACTS</h2> 
-				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
-				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
-	  			</p>
-			</td>	
-		</tr>
 	
  </table>	
  
@@ -117,7 +118,7 @@
 				</p>
 			</td>	
 		</tr>
-		</tr>
+		<tr>
 	  	<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/EPS_logo.png" width="80px"/>
