--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
  </table>	
  
  
- <h1 id="sponsors"> ORGANISERS AND PARTNERS</h1>
+ <h1 id="partners"> ORGANISERS AND PARTNERS</h1>
  <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
