--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-			<h2>TO OHBM</h2> 
+			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br> 			</br> 
+			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br>
 			</p>
 			</td>
 		</tr>
@@ -66,43 +66,9 @@
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
 			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
-			</br>
 	  		</p>
 			</td>
 		</tr>
-
- </table>
-			
- 
- <h1 id="register"> REGISTER</h1>
-  <table style="width:100%">
-		<tr>
-			<td style="width:350px; text-align:center">
-				</p>
-				<h2>SUBMIT AN ABSTRACT</h2> 
-				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
-				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
-	  			</p>
-			</td>	
-		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-				<h2>REGISTRATION</h2> 
-				<p>
-				Registration is now open </br>
-				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
-				Fee: 25£. </br>
-				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
-				</br>
-	  			</p>
-				</td>
-			</tr>
-	
- </table>	
- 
- 
- <h1 id="partners"> ORGANISERS AND PARTNERS</h1>
-  <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
 				<h2>ORGANISING COMMITTEE</h2> 
@@ -118,7 +84,38 @@
 				</p>
 			</td>	
 		</tr>
+		<tr>	
+ </table>
+			
+ 
+ <h1 id="register"> REGISTER</h1>
+  <table style="width:100%">
 		<tr>
+			<td style="width:350px; text-align:center">
+				<h2>REGISTRATION</h2> 
+				<p>
+				Registration is now open </br>
+				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
+				Fee: 25£. </br>
+				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
+	  			</p>
+				</td>
+			</tr>
+			<tr>
+			<td style="width:350px; text-align:center">
+				</p>
+				<h2>SUBMIT AN ABSTRACT</h2> 
+				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
+				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
+	  			</p>
+			</td>	
+		</tr>
+	
+ </table>	
+ 
+ 
+ <h1 id="partners">PARTNERS</h1>
+  <table style="width:100%">
 	  	<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/EPS_logo.png" width="80px"/>
@@ -135,7 +132,7 @@
   </br>
   </br>
   <p>
-  <center>
+  <center>  
   Follow us on twitter</br>
   <a href="https://twitter.com/GradientsMtl/" target="_blank">
   <img src="assets/twitter_logo_grey.jpg" width="60px" /></a>
