--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 			</tr>
 			<tr>
 			<td style="width:350px; text-align:center">
+				<h2>ABSTRACTS</h2> 
 				</p>
-				<h2>SUBMIT AN ABSTRACT</h2> 
 				We're welcoming abstract submission for flash talks and poster presentations. The top abstracts will be selected for flash talks (5mins) and all relevant abstracts will be accepted as poster presentations. Deadline for submissions is May 1st. </br>
 				Submit your abstracts <a href="https://forms.gle/NGN2TJzfEwMmop5Z8" target="_blank">here</a></br> 
 	  			</p>
