--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 				Registration is now open </br>
 				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
 				Fee: 25£. </br>
-				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the link below for contact details. </br>
+				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the registration link for contact details. </br>
 		  		</p>
 				</td>
 			</tr>
