--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 				Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
 				Elizabeth Jefferies PhD (University of York, UK) </br>
 				Robert Leech PhD (Kings College London, UK) </br>
-				Daniel Margulies PhD (Institut du Cerveau et de la Moelle épinière, France) </br>
+				Daniel Margulies PhD (CNRS, France) </br>
 				Sofie Valk PhD (Forschungszentrum Julich, Germany) </br>
 				B.T. Thomas Yeo PhD (National University of Singapore, Singapore) </br>
 				</p>
