--- a/index.html
+++ b/index.html
@@ -125,7 +125,12 @@
 			<center>
 				<img src="assets/neuro_logo.png" width="120px"/>
 			</center>
-		</td>								
+		</td>	
+	  	<td style="width:100px" text-align:center">	
+			<center>
+				<img src="assets/MPSC_logo.jpg" width="80px"/>
+			</center>
+		</td>
 	  	</tr>
  </table>	
  	
