--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 		</td>	
 	  	<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/MPSC_logo.jpg" width="80px"/>
+				<img src="assets/MPSC_logo.jpeg" width="80px"/>
 			</center>
 		</td>
 	  	</tr>
