--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
  </table>	
  
  
- <h1 id="partners">PARTNERS</h1>
+ <h1 id="partners">PARTNERS AND SPONSORS</h1>
   <table style="width:100%">
 	  	<td style="width:100px" text-align:center">	
 			<center>
