--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, many from the workshop will travel from Cambridge to Glasgow together via train. We will be in touch with registrees about the specific train times, so you can join the Gradients Train too. </br>
+			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, join a train-ride Gradient Brain Hack to Glasgow. We will be in touch with registrees about the specific train times, so you can get on board the Gradients Train. </br>
 			</p>
 			</td>
 		</tr>
