--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
 				</p>
 			</td>	
 		</tr>
+		<tr>
+			<td style="width:350px; text-align:center">
+			<h2>COVID-19 Regulations</h2> 
+			<p>
+			In line with World Health Organisation recommendations, current and valid COVID-19 vaccination is necessary for participation in the workshop. Attendees will be required to wear face coverings in the lecture hall, unless eating or drinking. </br>
+			</p>
+			</td>
+		</tr>
 		<tr>	
  </table>
 			
@@ -97,11 +105,11 @@
 				Registration is now open </br>
 				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
 				Fee: 25£. </br>
-				We have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the registration link for contact details. </br>
+				In case of travel changes due to the COVID pandemic, a refund may be requested up to one week before the event. Additionally, we have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the registration link for contact details. </br>
 		  		</p>
 				</td>
-			</tr>
-			<tr>
+		</tr>
+		<tr>
 			<td style="width:350px; text-align:center">
 				<h2>ABSTRACTS</h2> 
 				</p>
@@ -110,6 +118,17 @@
 	  			</p>
 			</td>	
 		</tr>
+		<tr>
+			<td style="width:350px; text-align:center">
+				<h2>LIVESTREAM</h2> 
+				</p>
+				The presentations and discussion panels will be livestreamed for those not able to attend the workshop in person. If you would like to receive the livestream link closer to the date, please add your email to the <a href="https://forms.gle/oneB5fwWNRnQMJAX6" target="_blank">form</a></br> 
+	  			</p>
+			</td>	
+		</tr>
+
+
+https://forms.gle/oneB5fwWNRnQMJAX6
 	
  </table>	
  
