--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<h2>PROGRAM</h2> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
+			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. If you would like to receive the livestream link closer to the date, please add your email to the <a href="https://forms.gle/oneB5fwWNRnQMJAX6" target="_blank">form</a></br>
 	  		</p>
 			</td>
 		</tr>
@@ -118,18 +118,6 @@
 	  			</p>
 			</td>	
 		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-				<h2>LIVESTREAM</h2> 
-				</p>
-				The presentations and discussion panels will be livestreamed for those not able to attend the workshop in person. If you would like to receive the livestream link closer to the date, please add your email to the <a href="https://forms.gle/oneB5fwWNRnQMJAX6" target="_blank">form</a></br> 
-	  			</p>
-			</td>	
-		</tr>
-
-
-https://forms.gle/oneB5fwWNRnQMJAX6
-	
  </table>	
  
  
