--- a/index.html
+++ b/index.html
@@ -102,10 +102,8 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION</h2> 
 				<p>
-				Registration is now open </br>
-				<a href="https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop" target="_blank">https://onlinesales.admin.cam.ac.uk/conferences-and-events/department-of-psychiatry/gradient-workshop/gradient-workshop/</a></br>
-				Fee: 25£. </br>
-				In case of travel changes due to the COVID pandemic, a refund may be requested up to one week before the event. Additionally, we have a small number of subsidised registration places available. If you are unable to pay the registration fee, please get in touch to request subsidised registration. Follow the registration link for contact details. </br>
+				Registration is now closed </br>
+				See you in Cambridge! </br>
 		  		</p>
 				</td>
 		</tr>
