--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the William Harvey Lecture Theatre in Clifford Allbutt Building. It's about a 25minute walk from Cambridge train station.You can enter the building via "The School of Clinical Medicine" door shown here, https://www.google.com/maps/place/Cambridge+University+Medical+Library/@52.1757946,0.1412617,21z/data=!4m5!3m4!1s0x47d87b67b3a1c053:0x9a5717ee0cfe6610!8m2!3d52.1757772!4d0.1412727, and some friendly volunteers will direct you to the lecture hall. 
+			The workshop will be held in the William Harvey Lecture Theatre in Clifford Allbutt Building. It's about a 25minute walk from Cambridge train station.You can enter the building via "The School of Clinical Medicine" door and some friendly volunteers will direct you to the lecture hall. 
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
