--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain Organisation, Cambridge 2022</title>
+<title>Gradients of Brain Organisation, Montréal 2023</title>
 <meta name="description" content="GRADIENTS WORKSHOP">
 <meta name="author" content="casey.paquola@gmail.com">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
   <div id="menu" class="menu">
   <center>
    <div id="menu" class="menu">
-    <a class="sitename" href="index.html">18|06|2022</a>
+    <a class="sitename" href="index.html">21|07|2023</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
@@ -41,7 +41,7 @@
 <section class="some-related-articles">
   <center>
   <h1 id="about">ABOUT</h1>
-   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients —of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 18th of June 2022, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
+   <p>Recent years have seen a rise of new methods and applications to study smooth spatial transitions — or gradients — of brain organization. Identification and analysis of cortical gradients provides a framework to study brain organization across species, to examine changes in brain development and aging, and to more generally study the interrelation between brain structure, function and cognition. In this pre-OHBM workshop, held on the 21st of July 2023, we will bring together outstanding junior and senior scientists to discuss the challenges and opportunities afforded by this emerging perspective. </br>
 	<tr>
 	</br>
 	<tr>
@@ -63,7 +63,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on 18th of June, the day before OHBM. On Sunday the 19th, join a train-ride Gradient Brain Hack to Glasgow. We will be in touch with registrees about the specific train times, so you can get on board the Gradients Train. </br>
+			The Gradient Workshop will take place on 21st of July, the day before OHBM. </br>
 			</p>
 			</td>
 		</tr>
@@ -72,7 +72,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the William Harvey Lecture Theatre in Clifford Allbutt Building. It's about a 25minute walk from Cambridge train station.You can enter the building via "The School of Clinical Medicine" door and some friendly volunteers will direct you to the lecture hall. 
+			The workshop will be held in the Jeanne-Timmins Amphitheatre at the Montreal Neurological Institute and Hospital. It's about a 15-minute walk from McGill University's downtown campus, and within walking distance to the McGill metro station. You can enter the building via the main entrance of the building, located at 3801, University Street, and some friendly volunteers will direct you to the lecture hall. 
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -81,6 +81,9 @@
 			<td style="width:350px; text-align:center">			
 				<h2>ORGANISING COMMITTEE</h2> 
 				<p>
+				Jessica Royer PsyD (McGill University, Canada) </br>
+				Sara Larivière PhD (Harvard University, USA) </br>
+				Nicole Eichert PhD (Oxford University, UK) </br>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
 				Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
 				Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
@@ -96,7 +99,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>COVID-19 Regulations</h2> 
 			<p>
-			In line with World Health Organisation recommendations, current and valid COVID-19 vaccination is necessary for participation in the workshop. Attendees will be required to wear face coverings in the lecture hall, unless eating or drinking. </br>
+			In line with policies currently in place in all healthcare facilities across the Province of Québec, attendees will be required to wear face coverings when circulating in the building and in the lecture hall, unless eating or drinking. </br>
 			</p>
 			</td>
 		</tr>
@@ -110,8 +113,8 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION</h2> 
 				<p>
-				Registration is now closed </br>
-				See you in Cambridge! </br>
+				Registration will open shortly! Stay tuned! </br>
+				See you in Montréal! </br>
 		  		</p>
 				</td>
 		</tr>
