--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the Jeanne-Timmins Amphitheatre at the Montreal Neurological Institute and Hospital. It's about a 15-minute walk from McGill University's downtown campus, and within walking distance to the McGill metro station. You can enter the building via the main entrance of the building, located at 3801, University Street, and some friendly volunteers will direct you to the lecture hall. 
+			The workshop will be held in the Jeanne-Timmins Amphitheatre at the Montreal Neurological Institute and Hospital. It's about a 15-minute walk from McGill University's downtown campus, and within walking distance to the McGill metro station. You can enter via the main entrance of the building, located at 3801, University Street, and some friendly volunteers will direct you to the lecture hall. 
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
