--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <table style="width:100%">
 	  	<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/EPS_logo.png" width="80px"/>
+				<img src="assets/cambridge_logo.jpeg" width="120px"/>
 			</center>
 		</td>		
 		<td style="width:100px" text-align:center">	
@@ -135,7 +135,7 @@
 		</td>	
 	  	<td style="width:100px" text-align:center">	
 			<center>
-				<img src="assets/MPSC_logo.jpeg" width="80px"/>
+				<img src="assets/qbin.jpg" width="80px"/>
 			</center>
 		</td>
 	  	</tr>
