--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<h2>PROGRAM</h2> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. If you would like to receive the livestream link closer to the date, please add your email to the <a href="https://forms.gle/oneB5fwWNRnQMJAX6" target="_blank">form</a></br>
+			All talks will also be <a href="https://vimeo.com/event/3134067" target="_blank">live-streamed</a></br> for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.
 	  		</p>
 			</td>
 	</tr>
@@ -111,10 +111,10 @@
   <table style="width:100%">
 		<tr>
 			<td style="width:350px; text-align:center">
-				<h2>REGISTRATION</h2> 
+				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration will open shortly! Stay tuned! </br>
-				See you in Montréal! </br>
+				Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br>
+				If you would like to submit an abstract, please use this <a href="https://forms.office.com/pages/responsepage.aspx?id=cZYxzedSaEqvqfz4-J8J6vk64Sf2z6RDtH9_vzCfzPRUMUFKTlI2NldIWktTN1FNWDlJWUVNQ0k0US4u" target="_blank">form</a>. The submission deadline is June 7th. The three top-rated abstract will highlighted in lighting talks. </br>
 		  		</p>
 				</td>
 		</tr>
