--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 			<h2>PROGRAM</h2> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talks will also be <a href="https://vimeo.com/event/3134067" target="_blank">live-streamed</a></br> for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.
+			All talks will also be <a href="https://vimeo.com/event/3134067" target="_blank">live-streamed</a> for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. </br>
 	  		</p>
 			</td>
 	</tr>
