--- a/index.html
+++ b/index.html
@@ -123,7 +123,12 @@
  
  <h1 id="partners">PARTNERS AND SPONSORS</h1>
   <table style="width:100%">
-	  	<td style="width:100px" text-align:center">	
+		<td style="width:100px" text-align:center">	
+			<center>
+				<img src="assets/hiball.jpeg" width="100px"/>
+			</center>
+		</td>	
+		<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/cambridge_logo.jpeg" width="100px"/>
 			</center>
