--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
 				Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br>
-				If you would like to submit an abstract, please use this <a href="https://forms.office.com/pages/responsepage.aspx?id=cZYxzedSaEqvqfz4-J8J6vk64Sf2z6RDtH9_vzCfzPRUMUFKTlI2NldIWktTN1FNWDlJWUVNQ0k0US4u" target="_blank">form</a>. The submission deadline is June 7th. The three top-rated abstract will highlighted in lighting talks. </br>
+				Abstract submission is now closed. </br>
 		  		</p>
 				</td>
 		</tr>
