--- a/index.html
+++ b/index.html
@@ -94,16 +94,7 @@
 				B.T. Thomas Yeo PhD (National University of Singapore, Singapore) </br>
 				</p>
 			</td>	
-		</tr>
-		<tr>
-			<td style="width:350px; text-align:center">
-			<h2>COVID-19 Regulations</h2> 
-			<p>
-			In line with policies currently in place in all healthcare facilities across the Province of Québec, attendees will be required to wear face coverings when circulating in the building and in the lecture hall, unless eating or drinking. </br>
-			</p>
-			</td>
-		</tr>
-		<tr>	
+		</tr>	
  </table>
 			
  
@@ -114,7 +105,7 @@
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
 				Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br>
-				Abstract submission is now closed. </br>
+				Abstract submission is now closed. See you in Montreal! </br>
 		  		</p>
 				</td>
 		</tr>
@@ -123,6 +114,11 @@
  
  <h1 id="partners">PARTNERS AND SPONSORS</h1>
   <table style="width:100%">
+		<td style="width:100px" text-align:center">	
+		<center>
+			<img src="assets/soc.png" width="100px"/>
+		</center>
+		</td>	
 		<td style="width:100px" text-align:center">	
 			<center>
 				<img src="assets/hiball.jpeg" width="100px"/>
@@ -144,6 +140,11 @@
 			</center>
 		</td>
 	  	</tr>
+		  <td style="width:100px" text-align:center">	
+			<center>
+				<img src="assets/erc.png" width="100px"/>
+			</center>
+		</td>	
  </table>	
  	
   </br>
