onwards to gradients 2024 :rocket:

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain Organisation, Montréal 2023</title>
+<title>Gradients of Brain Organisation, Korea 2024</title>
 <meta name="description" content="GRADIENTS WORKSHOP">
 <meta name="author" content="casey.paquola@gmail.com">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
   <div id="menu" class="menu">
   <center>
    <div id="menu" class="menu">
-    <a class="sitename" href="index.html">21|07|2023</a>
+    <a class="sitename" href="index.html">22|06|2024</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
@@ -55,7 +55,7 @@
 			<h2>PROGRAM</h2> 
 			<p>
 			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talks will also be <a href="https://vimeo.com/event/3134067" target="_blank">live-streamed</a> for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. </br>
+			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. </br>
 	  		</p>
 			</td>
 	</tr>
@@ -63,7 +63,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on 21st of July, the day before OHBM. </br>
+			The Gradient Workshop will take place on the 22nd of June, 2024, the day before OHBM. </br>
 			</p>
 			</td>
 		</tr>
@@ -72,7 +72,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the Jeanne-Timmins Amphitheatre at the Montreal Neurological Institute and Hospital. It's about a 15-minute walk from McGill University's downtown campus, and within walking distance to the McGill metro station. You can enter via the main entrance of the building, located at 3801, University Street, and some friendly volunteers will direct you to the lecture hall. 
+			The workshop will be held in the Natural Science Campus at Sungkyunkwan University (Semiconductor building, 330102) in Suwon, Korea. Buses will be arranged to transport attendees from the COEX Convention and Exhibition Center in Seoul (where OHBM is taking place) to the workshop location. 
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -81,17 +81,17 @@
 			<td style="width:350px; text-align:center">			
 				<h2>ORGANISING COMMITTEE</h2> 
 				<p>
+				Seok-Jun Hong PhD (Sungkyunkwan University, Korea) </br>
+				Bo-yong Park PhD (Inha University, Korea) </br>
 				Jessica Royer PsyD (McGill University, Canada) </br>
 				Sara Larivière PhD (Harvard University, USA) </br>
-				Nicole Eichert PhD (Oxford University, UK) </br>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
-				Casey Paquola PhD (Forschungszentrum Julich, Germany) </br>
-				Boris Bernhardt PhD (Montreal Neurological Institute, Canada) </br>
+				Casey Paquola PhD (INM-7, Forschungszentrum Julich, Germany) </br>
+				Boris Bernhardt PhD (McGill University, Canada) </br>
 				Elizabeth Jefferies PhD (University of York, UK) </br>
 				Robert Leech PhD (Kings College London, UK) </br>
 				Daniel Margulies PhD (CNRS, France) </br>
-				Sofie Valk PhD (Forschungszentrum Julich, Germany) </br>
-				B.T. Thomas Yeo PhD (National University of Singapore, Singapore) </br>
+				Sofie Valk PhD (Max Planck Institute for Human Cognitive and Brain Sciences, Germany) </br>
 				</p>
 			</td>	
 		</tr>	
@@ -104,8 +104,8 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br>
-				Abstract submission is now closed. See you in Montreal! </br>
+				Registration is and abstract submission will open soon! Stay tuned. </br> 
+				<!-- Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br> -->
 		  		</p>
 				</td>
 		</tr>
