--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the Natural Science Campus at Sungkyunkwan University (Semiconductor building, 330102) in Suwon, Korea. Buses will be arranged to transport attendees from the COEX Convention and Exhibition Center in Seoul (where OHBM is taking place) to the workshop location. 
+			The workshop will be held in the Natural Science Campus at Sungkyunkwan University (Semiconductor building, 330102) in Suwon, Korea. Buses will be arranged to transport attendees from the workshop location to the COEX Convention and Exhibition Center in Seoul (where OHBM is taking place) after the workshop. When registering, please indicate if you would like to secure a spot on the gradient bus!
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -104,8 +104,9 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration is and abstract submission will open soon! Stay tuned. </br> 
-				<!-- Registration is <a href="https://www.conftool.com/gradients2023/" target="_blank">open</a>!</br> -->
+				Registration is <a href="http://gradientsworkshop.datakorea.io/" target="_blank">open</a>!</br>
+				Please note that direct payment by card is only available to Korean residents. Non-Korean attendees must use the "Paypal" option to register.</br>
+				Abstracts can be submitted directly to by9433[at]gmail[dot]com (Bo-yong Park, PhD) and should be no longer than 500 words.</br>
 		  		</p>
 				</td>
 		</tr>
