--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
 		</td>	
 		<td style="width:80px" text-align:center">	
 			<center>
+				<img src="assets/CNIR_logo.jpeg" width="120px"/>
+			</center>
+		</td>
+		<td style="width:80px" text-align:center">	
+			<center>
 				<img src="assets/cambridge_logo.jpeg" width="100px"/>
 			</center>
 		</td>		
-		<td style="width:80px" text-align:center">	
-			<center>
-				<img src="assets/neuro_logo.png" width="120px"/>
-			</center>
-		</td>	
 	  	<td style="width:80px" text-align:center">	
 			<center>
 				<img src="assets/qbin.jpg" width="100px"/>
