info for livestream

--- a/index.html
+++ b/index.html
@@ -54,8 +54,9 @@
 	<td style="width:350px; text-align:center">
 			<h2>PROGRAM</h2> 
 			<p>
-			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>
-			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd. </br>
+			The preliminary program is downloadable <a href="Program.pdf" target="_blank">here</a></br>.
+			All talks will also be live-streamed for those not able to attend in person, and moderators will help to pass on questions from the virtual crowd.</br>
+			The zoom link for virtual attendance will be sent to you once you register (please indicate that you will only be attending the livestream)</br>
 	  		</p>
 			</td>
 	</tr>
