update payment site

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration is <a href="http://gradientsworkshop.datakorea.io/" target="_blank">open</a>!</br>
+				Registration is <a href="http://gradients-registration.com/" target="_blank">open</a>!</br>
 				Please note that direct payment by card is only available to Korean residents. Non-Korean attendees must use the "Paypal" option to register.</br>
 				Abstracts can be submitted directly to by9433[at]gmail[dot]com (Bo-yong Park, PhD) and should be no longer than 500 words.</br>
 				The deadline for abstract submission is May 22nd, 2024. Notifications for flash talks will be sent out June 1st, 2024.</br>
