--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Gradients of Brain Organisation, Korea 2024</title>
+<title>Gradients of Brain Organisation, Brisbane 2025</title>
 <meta name="description" content="GRADIENTS WORKSHOP">
 <meta name="author" content="casey.paquola@gmail.com">
 <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -18,7 +18,7 @@
   <div id="menu" class="menu">
   <center>
    <div id="menu" class="menu">
-    <a class="sitename" href="index.html">22|06|2024</a>
+    <a class="sitename" href="index.html">23|06|2025</a>
     <a class="show" href="#menu">Menu</a><a class="hide" href="#hidemenu">Menu</a>
     <ul class="menu-items">
       <li><a href="#about">ABOUT</a></li>
@@ -64,7 +64,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>ONWARDS TO OHBM</h2> 
 			<p>
-			The Gradient Workshop will take place on the 22nd of June, 2024, the day before OHBM. </br>
+			The Gradient Workshop will take place on the 23rd of June, 2025, the day before OHBM. </br>
 			</p>
 			</td>
 		</tr>
@@ -73,7 +73,7 @@
 			<td style="width:350px; text-align:center">
 			<h2>LOCATION</h2> 
 			<p>
-			The workshop will be held in the Natural Science Campus at Sungkyunkwan University (Semiconductor building, 330102) in Suwon, Korea. Buses will be arranged to transport attendees from the workshop location to the COEX Convention and Exhibition Center in Seoul (where OHBM is taking place) after the workshop. When registering, please indicate if you would like to secure a spot on the gradient bus!
+			The workshop will be held at QUT Gardens Point Campus in Brisbane, Australia (P Block, level 5).			. 
 			<td style="width:350px; text-align:center">
 			</p>
 			</td>
@@ -85,7 +85,7 @@
 				Seok-Jun Hong PhD (Sungkyunkwan University, Korea) </br>
 				Bo-yong Park PhD (Inha University, Korea) </br>
 				Jessica Royer PsyD (McGill University, Canada) </br>
-				Sara Larivière PhD (Harvard University, USA) </br>
+				Sara Larivière PhD (Université de Sherbrooke, Canada) </br>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
 				Casey Paquola PhD (INM-7, Forschungszentrum Julich, Germany) </br>
 				Boris Bernhardt PhD (McGill University, Canada) </br>
@@ -105,10 +105,8 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration is <a href="http://gradients-registration.com/" target="_blank">open</a>!</br>
-				Please note that direct payment by card is only available to Korean residents. Non-Korean attendees must use the "Paypal" option to register.</br>
-				Abstracts can be submitted directly to by9433[at]gmail[dot]com (Bo-yong Park, PhD) and should be no longer than 500 words.</br>
-				The deadline for abstract submission is May 22nd, 2024. Notifications for flash talks will be sent out June 1st, 2024.</br>
+				Registration will open soon, with an option for abstract submission to present a poster! </br>
+				The top ranking abstracts will be selected for a flash talk.</br>
 		  		</p>
 				</td>
 		</tr>
