--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				<h2>ORGANISING COMMITTEE</h2> 
 				<p>
 				Seok-Jun Hong PhD (Sungkyunkwan University, Korea) </br>
-				Bo-yong Park PhD (Inha University, Korea) </br>
+				Bo-yong Park PhD (Korea University, Korea) </br>
 				Jessica Royer PsyD (McGill University, Canada) </br>
 				Sara Larivière PhD (Université de Sherbrooke, Canada) </br>
 				Richard Bethlehem PhD (University of Cambridge, UK) </br>
@@ -105,8 +105,8 @@
 			<td style="width:350px; text-align:center">
 				<h2>REGISTRATION AND ABSTRACT SUBMISSION</h2> 
 				<p>
-				Registration will open soon, with an option for abstract submission to present a poster! </br>
-				The top ranking abstracts will be selected for a flash talk.</br>
+				Registration will open soon, with instructions on how to submit your abstract for a poster presentation! </br>
+				The three top ranking abstracts will be selected for a flash talk.</br>
 		  		</p>
 				</td>
 		</tr>
@@ -152,9 +152,9 @@
   </br>
   <p>
   <center>  
-  Follow us on twitter</br>
-  <a href="https://twitter.com/GradientsMtl/" target="_blank">
-  <img src="assets/twitter_logo_grey.jpg" width="60px" /></a>
+  Follow us on Bluesky</br>
+  <a href="https://bsky.app/profile/gradientsworkshop.bsky.social" target="_blank">
+  <img src="assets/bluesky_logo.png" width="60px" /></a>
   </center>
   </br>
   </br>
